--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,15 @@ services:
     environment:
       REDIS_HOST: redis
       REDIS_PORT: 6379
+    networks:
+      - app-network
 
   redis:
     image: redis:7-alpine
     ports:
       - "6379:6379"
+    networks:
+      - app-network
 
   prometheus:
     image: prom/prometheus:latest
@@ -24,4 +28,9 @@ services:
       - "9090:9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    networks:
+      - app-network
 
+networks:
+  app-network:
+    driver: bridge
