--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,33 @@
+name: Prometheus Task
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
 jobs:
+
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v3
+    - name: Build and start containers for a services
+      run: docker compose up -d
 
-      - name: Build and start containers for a services
-        run: docker-compose up -d
+    - name: Wait for webapp to be available
+      run: |
+        for i in {1..10}; do
+          curl -s http://localhost:8080 && break || sleep 5;
+        done
 
-      - name: Wait for webapp to be available
-        run: |
-          for i in {1..10}; do
-            curl -s http://localhost:8080 && break || sleep 5;
-          done
+    - name: Test containers functionality
+      uses: cypress-io/github-action@v6
+      env:
+        CYPRESS_BASE_URL: http://localhost:8080
+        CYPRESS_PROMETHEUS_URL: http://localhost:9090
+      with:
+        working-directory: ./.github/tests
 
-      - name: Test containers functionality
-        uses: cypress-io/github-action@v6
-        env:
-          CYPRESS_BASE_URL: http://localhost:8080
-          CYPRESS_PROMETHEUS_URL: http://localhost:9090
-        with:
-          working-directory: ./.github/tests
