--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,9 @@ jobs:
 
     - name: Wait for webapp to be available
       run: |
-        for i in {1..10}; do
-          curl -s http://localhost:8080 && break || sleep 5;
+        while ! curl --silent http://localhost:8080; do
+          echo "Waiting for webapp to be available..."
+          sleep 5
         done
 
     - name: Test containers functionality
