--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 
 services:
   webapp:
@@ -10,17 +10,21 @@ services:
     depends_on:
       - redis
     environment:
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-    networks:
-      - app-network
+      - REDIS_ADDRESS=redis
+      - REDIS_PORT=6379
 
   redis:
-    image: redis:7-alpine
+    image: "redis:latest"
     ports:
       - "6379:6379"
-    networks:
-      - app-network
+    expose:
+      - "6379"
+    command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
+    volumes:
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
+    environment:
+      environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
 
   prometheus:
     image: prom/prometheus:latest
@@ -28,9 +32,8 @@ services:
       - "9090:9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
-    networks:
-      - app-network
+    depends_on:
+      - webapp
+    expose:
+      - "9090"
 
-networks:
-  app-network:
-    driver: bridge
