--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "koa": "^2.14.2",
     "koa-static": "^5.0.0",
     "koa-views": "^8.1.0",
+    "prom-client": "^15.1.3",
     "redis": "^4.6.7"
   },
   "devDependencies": {
