--- a/prometheus.yml
+++ b/prometheus.yml
@@ -2,9 +2,16 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  - job_name: "docker"
+  - job_name: 'webapp'
     static_configs:
-      - targets: 
-        - "webapp:8080"
-        - "redis:6379"
-    metrics_path: "/metrics"
+      - targets: ['webapp:8080']
+      labels:
+        service: "webapp"
+
+  - job_name: 'redis'
+    static_configs:
+      - targets: ['redis:6379']
+
+  - job_name: 'prometheus'
+    static_configs:
+      - targets: ['localhost:9090']
