--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,17 +1,15 @@
-global:
-  scrape_interval: 15s
-
 scrape_configs:
   - job_name: 'webapp'
     static_configs:
-      - targets: ['webapp:8080']
-      labels:
-        service: "webapp"
+      - targets:
+          - 'webapp:8080'
 
   - job_name: 'redis'
     static_configs:
-      - targets: ['redis:6379']
+      - targets:
+          - 'redis:6379'
 
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['localhost:9090']
+      - targets:
+          - 'prometheus:9090'
