--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build and start containers for a services
-      run: docker compose up -d
 
+    # Шаг для старта контейнеров
+    - name: Build and start containers for a services
+      run: |
+        docker compose up -d
+        # Логирование статуса контейнеров после запуска
+        docker-compose ps
+        docker-compose logs
+
+    # Шаг для отключения брандмауэра (для временной проверки)
+    - name: Disable firewall (temporary check)
+      run: |
+        sudo ufw disable || echo "Firewall is not active"
+
+    # Шаг для тестирования функциональности контейнеров
     - name: Test containers functionality
       uses: cypress-io/github-action@v6
       env:
@@ -25,3 +37,8 @@ jobs:
       with:
         working-directory: ./.github/tests
 
+    # Логирование всех контейнеров после выполнения тестов
+    - name: Log docker containers
+      run: |
+        docker ps
+        docker logs $(docker ps -q)
