--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     environment:
       - REDIS_ADDRESS=redis
       - REDIS_PORT=6379
+      - APP_PORT=8080
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health"] # Пример endpoint, добавь свой
       interval: 30s
