--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,12 +36,13 @@ services:
       start_period: 10s
       timeout: 10s
 
-  redis-exporter:
-    image: oliver006/redis_exporter:latest
-    environment:
-      REDIS_ADDR: redis:6379
+  cadvisor:
+    image: google/cadvisor:latest
+    container_name: cadvisor
     ports:
-      - "9121:9121"
+      - "8081:8080"
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
 
   prometheus:
     image: prom/prometheus:latest
