--- a/prometheus.yml
+++ b/prometheus.yml
@@ -9,6 +9,11 @@ scrape_configs:
       - targets:
           - 'redis:6379'
 
+  - job_name: 'cadvisor'
+    static_configs:
+      - targets:
+          - 'cadvisor:8080'
+
   - job_name: 'prometheus'
     static_configs:
       - targets:
