--- a/prometheus.yml
+++ b/prometheus.yml
@@ -7,7 +7,7 @@ scrape_configs:
   - job_name: 'redis'
     static_configs:
       - targets:
-          - 'redis:6379'
+          - 'redis-exporter:9121'  # Исправлено: используйте порт 9121 для redis-exporter
 
   - job_name: 'cadvisor'
     static_configs:
