--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redis": "^4.6.7"
   },
   "devDependencies": {
+    "cypress": "^12.17.4",
     "jest": "^29.6.2",
     "redis-mock": "^0.56.3",
     "supertest": "^6.3.3"
