--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,20 +1,20 @@
+global:
+  scrape_interval: 15s
+
 scrape_configs:
   - job_name: 'webapp'
     static_configs:
-      - targets:
-          - 'webapp:8080'
+      - targets: ['webapp:8080']
 
   - job_name: 'redis'
     static_configs:
-      - targets:
-          - 'redis-exporter:9121'
+      - targets: ['redis-exporter:9121']
 
   - job_name: 'cadvisor'
     static_configs:
-      - targets:
-          - 'cadvisor:8080'
+      - targets: ['cadvisor:8080']
 
   - job_name: 'prometheus'
     static_configs:
-      - targets:
-          - 'prometheus:9090'
+      - targets: ['prometheus:9090']
+
