--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,8 @@ services:
       - "8081:8080"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
+      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
+      - "/:/rootfs:ro"
 
 
   prometheus:
